<resources>
    <string name="app_name">Çevrimdışı Sözlük Pro</string>
    <string name="title_activity_main">Sözlük</string>
    <string name="navigation_drawer_open">Menüyü Aç</string>
    <string name="navigation_drawer_close">Menüyü Kapat</string>
    <string name="dictionary">Sözlük</string>
    <string name="irregular_verbs">Düzensiz Fiiller</string>
    <string name="pharasal_verbs">Deyimsel Fiiller</string>
    <string name="favorites">Favoriler</string>
    <string name="history">Geçmiş</string>
    <string name="settings">Ayarlar</string>
    <string name="common_pharases">Kalıp Cümleler</string>
    <string name="failed_to_open_db">Veritabanı açılamadı!</string>
    <string name="past_simple">Past Simple: %s</string>
    <string name="past_participle">Past Participle: %s</string>
    <string name="third_person_singular">Third Person Singular: %s</string>
    <string name="present_simple_gerund">Present Participle Gerund: %s</string>
    <string name="meaning">Meaning: %s</string>
    <string name="example">Example: %s</string>
    <string name="pick_category">Kategori Seçin</string>
    <string name="en2tr"><![CDATA[EN -> TR]]></string>
    <string name="tr2en"><![CDATA[TR -> EN]]></string>
    <string name="direction_changed">Çeviri yönü değiştirildi.</string>
    <string name="search_en">Ara (İngilizce)</string>
    <string name="search_tr">Ara (Türkçe)</string>
    <string name="direction">direction</string>
    <string name="added_to_favorites">Kelime favorilere eklendi</string>
    <string name="favorite_already_exists">Bu kelime zaten favori listenizde</string>
    <string name="failed_to_add_favorite">Kelime eklenirken bir hata oluştu</string>
    <string-array name="categories">
        <item>Selamlaşma</item>
        <item>Tanışma</item>
        <item>Yardımlaşma</item>
        <item>Genel</item>
        <item>Alışveriş</item>
        <item>Adres</item>
        <item>Yemek</item>
        <item>Seyahat</item>
        <item>Konaklama</item>
        <item>Telefon</item>
        <item>Arkadaşlık</item>
        <item>Sağlık</item>
        <item>İş</item>
        <item>Para</item>
        <item>Eğitim</item>
    </string-array>
    <string name="title_activity_fav_his_meaning_viewer">FavHisMeaningViewer</string>
    <string name="word">word</string>
    <string name="lang">lang</string>
    <string name="are_you_sure">Emin misiniz?</string>
    <string name="fav_will_be_deleted">Favori kelimeniz silinecek!</string>
    <string name="yes_delete">Evet, sil!</string>
    <string name="deleted">Silindi!</string>
    <string name="fav_deleted">Favori kelimeniz silindi!</string>
    <string name="ok">Tamam</string>
    <string name="history_will_be_deleted">Geçmiş kaydı silinecek!</string>
    <string name="history_deleted">Geçmiş kaydınız silindi!</string>
    <string name="all_history_will_be_deleted">Bütün geçmişiniz silinecek!</string>
    <string name="history_cleared">Geçmiş temizlendi!</string>
    <string name="no">Hayır</string>
    <string name="downloading_database">Veritabanı indiriliyor.</string>
    <string name="BASE64_PUBLIC_KEY">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAjDkNB7Si5TGHPQ+lYNHmpREsnRGiqZubUQJDIsO2qz6+b/UuFaoOJU5AZzHg39MgSzyIakgcuDDQNEfal1+TKhk3OGtzAI8qxPLkLZMntXdbtICFYwBkEKekh5oOWcpAlO7NGi/dqfCPiv6zmIrHyQekwJbRa39Psmj1kPnIetbf0BRZCfuN4hJTzFslQeTR2mRPsg0rYCnQSO7p7u2Df39KW00L4lFNcojSXmMMzLDfl4C5p34SgNCZLbmGalfHV7K5odX+LjDMfLj/aP40F37UEF2bBbYIeOIf1MtIwEC/RD5c2pP5S1nfEbHykheKsSZYFxPjoCxusEURHYT+vQIDAQAB</string>
    <string name="action_about">Hakkında</string>
</resources>