<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@mipmap/ic_find_in_page_black_24dp"
            android:title="@string/dictionary" />
        <item
            android:id="@+id/nav_irregular"
            android:icon="@mipmap/ic_description_black_24dp"
            android:title="@string/irregular_verbs" />
        <item
            android:id="@+id/nav_pharasal"
            android:icon="@mipmap/ic_assignment_black_24dp"
            android:title="@string/pharasal_verbs" />
        <item
            android:id="@+id/nav_commons"
            android:icon="@mipmap/ic_book_black_24dp"
            android:title="@string/common_pharases" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/ic_star_white_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/history" />

    </group>

</menu>
